# toy-crypto-math

./: .buildinfo  .gitignore  .gitmodules  CHANGELOG.md  LICENSE.txt  README.md  bibliography.html  birthday.html  bit_utils.html  dev-requirements.txt  ec.html  games.html  genindex.html  index.html  motivation.html  mypy.ini  nt.html  objects.inv  py-modindex.html  pyproject.toml  pyrefly.toml  rand.html  requirements.txt  rsa.html  ruff.toml  search.html  searchindex.js  sieve.html  timings.csv  timings.json  tox.toml  ty.toml  types.html  utils.html  vigenere.html
.github/workflows/: docs.yml  doctest.yml  gh-pages.yml  lint.yml  pytest.yml  type-check.yml
_modules/: index.html
_modules/toy_crypto/: birthday.html  bit_utils.html  ec.html  nt.html  rand.html  rsa.html  sec_games.html  sieve.html  types.html  utils.html  vigenere.html  wycheproof.html
_sources/modules/: birthday.rst.txt  vigenere.rst.txt
_sources/modules/rsa/: oaep.rst.txt
_static/: sphinx_toolbox_installation.js
docs/: requirements.txt
docs/scripts/: Makefile  ttable2image.py
docs/source/: birthday.rst  bit_utils.rst  conf.py  ec.rst  games.rst  index.rst  nt.rst  rand.rst  refs.bib  rsa.rst  sieve.rst  utils.rst  vigenere.rst
docs/source/modules/: birthday.rst  games.rst  index.rst  nt.rst  types.rst  utils.rst  vigenere.rst  wycheproof.rst
docs/source/modules/rsa/: keygen.rst  primitive.rst
docs/source/modules/wycheproof/: api.rst  index.rst  usage.rst
docs/source/why/: index.rst
intro/: quickstart.html
modules/: birthday.html  bit_utils.html  ec.html  games.html  index.html  nt.html  rand.html  rsa.html  sieve.html  types.html  utils.html  vigenere.html
modules/rsa/: index.html  keygen.html  oaep.html  primitive.html
modules/wycheproof/: api.html  index.html  usage.html
profiling/: profile_sieve.py  timing_plots.py
src/: primefac.pyi
src/math_utils/: __init__.py  ec.py  rsa.py
src/toy_crypto/: __about__.py  birthday.py  bit_utils.py  ec.py  nt.py  rand.py  redundent.py  rsa.py  sec_games.py  sieve.py  types.py  utils.py  vigenere.py  wycheproof.py
src/toy_crypto/nt/: __init__.py  crt.py  errors.py
tests/: CHANGELOG.md  __init__.py  ec_test_data.sage  hash_collision_wikipedia.py  test_birthday.py  test_bit_utils.py  test_ec.py  test_math_utils.py  test_nt _crt.py  test_nt.py  test_rand.py  test_rsa.py  test_sec_games.py  test_sieve.py  test_types.py  test_utils.py  test_vigenere.py  test_wycheproof.py  timing_sieve.py  wycheproof.py
why/: index.html
