[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "math-utils"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Jeffrey Goldberg", email = "jeffrey@goldmark.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/math-utils#readme"
Issues = "https://github.com/unknown/math-utils/issues"
Source = "https://github.com/unknown/math-utils"

[tool.hatch.version]
path = "src/math_utils/__about__.py"


[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "ruff",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
lint = "ruff check {args:src/math_utils tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/math_utils tests}"

[tool.coverage.run]
source_pkgs = ["math_utils", "tests"]
branch = true
parallel = true
omit = [
  "src/math_utils/__about__.py",
]

[tool.coverage.paths]
math_utils = ["src/math_utils", "*/math-utils/src/math_utils"]
tests = ["tests", "*/math-utils/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
