[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toy-crypto-math"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Jeffrey Goldberg", email = "jeffrey@goldmark.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/toy-crypto-math#readme"
Issues = "https://github.com/unknown/toy-crypto-math/issues"
Source = "https://github.com/unknown/toy-crypto-math"

[tool.hatch.version]
path = "src/toy_crypto/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "ruff",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
lint = "ruff check {args:src/toy_crypto tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/toy_crypto tests}"

[tool.coverage.run]
source_pkgs = ["toy_crypto", "tests"]
branch = true
parallel = true
omit = [
  "src/toy_crypto/__about__.py",
]

[tool.coverage.paths]
toy_crypto = ["src/toy_crypto", "*/toy-crypto-math/src/toy_crypto"]
tests = ["tests", "*/toy-crypto-math/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "statistical: marks tests of a statistical nature (deselect with '-m \"not statistical\"')",
]